webui: make summary details wrapped correctly (e.g. for CertError)

--- a/webui/assets/static/style.css
+++ b/webui/assets/static/style.css
@@ -15,3 +15,11 @@ details {
 details.important {
 	box-shadow: 2px 2px 2px red;
 }
+
+div.details {
+	margin-top: 1rem;
+}
+
+pre {
+    white-space: pre-wrap;
+}
